TestSuite/errors/err0417.pas
begin
  var a:=Arr(1);
  Write(a[a.GetLowerBound]);
end.